--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "analytics",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Volodymyr-Riashchykov.github.io/analyt",  
+  "homepage": "https://volodymyr-riashchykov.github.io/analyt/",  
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
